--- a/print.html
+++ b/print.html
@@ -39,12 +39,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>3D Printing</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>For this project, only the platform, keypad holder and the keys have to be 3D printed. The models for both are shown below.</p>
+        <p>For this project, only the platform, keypad holder and the keys have to be 3D printed. The models for them are shown below.</p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd96874d533e68d63b8b9?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd9688632ddee257ba5c3?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968e0ee5069217e5020?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968bf8177a5d345c36b?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p>The print for the platforms and keypad holder was great, they fit perfectly into the casing, however the keys had an issue. The keys were too big to fit into the holes cut into the casing, I solved it by making the keys smaller but then found another flaw. The hole to fit the button in was too deep and I could not press the button down. I had remedied that by adding some hot glue into the hole but decided later on to reprint the key but with the keycaps and removing the hole at the bottom, the printed model is the one shown above.</p>
+        <p>These are the keys I printed.</p>
+        <p><img src="images/key1.jpeg" style="width:100%" alt="key1"></p>
+        <p><img src="images/key2.jpeg" style="width:100%" alt="key2"></p>
+        <p><img src="images/key.jpeg" style="width:100%" alt="final key"></p>
         <p>Printed parts</p>
         <p><img src="images/implement3.jpeg" style="width:100%" alt="platforms"></p>
         <p><img src="images/implement1.jpeg" style="width:100%" alt="keypad"></p>
