--- a/process.html
+++ b/process.html
@@ -55,9 +55,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><img src="images/finish2.jpeg" style="width:100%" alt="finish side"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
-        <p class="w3-button w3-center w3-bar-item w3-row"><a href="slide.html" onclick="w3_close()">Presentation Slide</a></p>
-        <p class="w3-button w3-center w3-bar-item w3-row"><a href="youtube.com" onclick="w3_close()">Presentation Video</a></p>
-        <p class="w3-button w3-center w3-bar-item w3-row"><a href="card.html" onclick="w3_close()">Ownership Card</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="slide.html" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="youtube.com" onclick="w3_close()" class="w3-bar-item">Presentation Video</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="card.html" onclick="w3_close()" class="w3-bar-item">Ownership Card</a></p>
       </div>
     </div>
   </div>
