--- a/process.html
+++ b/process.html
@@ -51,12 +51,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>I then secured the platforms down with some hot glue.</p>
         <p><img src="images/implement3.jpeg" style="width:100%" alt="adding speakers"></p>
         <p>In the end after some trial and error, this is the finished product.</p>
-        <p><img src="images/finish1.jpeg" style="width:100%" alt="finish front"></p>
-        <p><img src="images/finish2.jpeg" style="width:100%" alt="finish side"></p>
+        <p><img src="images/finish.jpeg" style="width:100%" alt="finish front"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
         <p class="w3-button w3-center w3-bar-block w3-row"><a href="slide.html" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a></p>
-        <p class="w3-button w3-center w3-bar-block w3-row"><a href="youtube.com" onclick="w3_close()" class="w3-bar-item">Presentation Video</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="https://youtu.be/ZSzxxoVQcik" onclick="w3_close()" class="w3-bar-item">Presentation Video</a></p>
         <p class="w3-button w3-center w3-bar-block w3-row"><a href="card.html" onclick="w3_close()" class="w3-bar-item">Ownership Card</a></p>
       </div>
     </div>
