--- a/process.html
+++ b/process.html
@@ -40,11 +40,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>Before the start of this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
-        <p>The proposal is <a href="prj_Janesse.html">here</a></p>
+        <p>The proposal is <a href="prj_Janesse.pptx">here</a></p>
         <p>After the project was approved, I started designing what I wanted to make on paper.</p>
         <p><img src="images/casebottom.jpeg" style="width:100%" alt="case bottom"></p>
         <p>After several attempts at trying to make the design's coding work, which can be found <a href="code.html">here</a>, I ultimately decided to remove the button that allows me to toggle between pages as the coding for it was to complicated for me to code. I then designed the box and other parts of it to be made later on in 3D Printing or Lazer Cutting.</p>
-        <p>I then 3D printed out the platform, keypad holder and keys, whose process can be found <a href="print.html">here</a>, and lazer cutted the casing to hold the parts in, whose process can be found <a href="cut.html">here</a>. I then aseembled the project together.</p>
+        <p>I then 3D printed out the platform, keypad holder and keys, whose process can be found <a href="print.html">here</a>, and lazer cut the casing to hold the parts in, whose process can be found <a href="cut.html">here</a>. I then aseembled the project together.</p>
         <p>I screwed in the speakers and the keypad holder in place.</p>
         <p><img src="images/implement2.jpeg" style="width:100%" alt="adding speakers"></p>
         <p><img src="images/implement1.jpeg" style="width:100%" alt="adding keypad"></p>
@@ -54,9 +54,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><img src="images/finish.jpeg" style="width:100%" alt="finish front"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
-        <p class="w3-button w3-center w3-bar-block w3-row"><a href="slide.html" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="images/slide.jpg" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a></p>
         <p class="w3-button w3-center w3-bar-block w3-row"><a href="https://youtu.be/ZSzxxoVQcik" onclick="w3_close()" class="w3-bar-item">Presentation Video</a></p>
-        <p class="w3-button w3-center w3-bar-block w3-row"><a href="card.html" onclick="w3_close()" class="w3-bar-item">Ownership Card</a></p>
+        <p class="w3-button w3-center w3-bar-block w3-row"><a href="images/card.jpg" onclick="w3_close()" class="w3-bar-item">Ownership Card</a></p>
       </div>
     </div>
   </div>
