--- a/code.html
+++ b/code.html
@@ -45,6 +45,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>After making sure the coding could work, I changed the coding to work with the DFplayer mini. I then changed the audio files in the SD card to some piano keys so that I could play <a href="https://youtu.be/wDgQdr8ZkTw">Megalovania</a>. Although the audio sounded soft when the speaker was not in the box, it was audible when in the box. Though it has to be noted that even though the note sounded correct when played on the computer, it did not sound like the note its supposed to be when played through the speaker. The circuit and code is shown below.</p>
         <p><iframe src=https://create.arduino.cc/editor/imposter_jr/0db0c823-cb8b-431f-a28d-ebf8d64956cd/preview?embed style="height:510px;width:100%;margin:10px 0" frameborder=0></iframe></p>
         <p><img src="images/circuit.jpeg" style="width:100%" alt="circuit"></p>
+        <p>I then removed the Arduino Uno and replaced it with an Arduino Nano that I slotted into the breadboard. However, due to a lack of forethinking, I had already glued down the casing and platforms and am unable to take a picture of the circuit. But I am proud to note that the circuit still works after transfering the wires and code over. I also added in a power socket onto the circuit so I can power the launchpad with a 5V power supply.</p>
       </div>
     </div>
   </div>
