--- a/print.html
+++ b/print.html
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>3D Printing</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>For this project, only the platform, keypad holder and the keys have to be 3D printed. The models for them are shown below.</p>
+        <p>For this project, only the platforms, keypad holder and the keys have to be 3D printed. The models for them are shown below.</p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd96874d533e68d63b8b9?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd9688632ddee257ba5c3?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968e0ee5069217e5020?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
