--- a/print.html
+++ b/print.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><img src="images/key1.jpeg" style="width:100%" alt="key1"></p>
         <p><img src="images/key2.jpeg" style="width:100%" alt="key2"></p>
         <p><img src="images/key.jpeg" style="width:100%" alt="final key"></p>
-        <p>Printed parts</p>
+        <p>Other printed parts</p>
         <p><img src="images/implement3.jpeg" style="width:100%" alt="platforms"></p>
         <p><img src="images/implement1.jpeg" style="width:100%" alt="keypad"></p>
       </div>
