--- a/process.html
+++ b/process.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>Before the start of this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
-        <p>The proposal is <a href="prj_Janesse.docx">here</a></p>
+        <p>The proposal is <a href="prj_Janesse.html">here</a></p>
         <p>After the project was approved, I started designing what I wanted to make on paper.</p>
         <p><img src="images/design.jpeg" style="width:100%" alt="design"></p>
         <p>After several attempts at trying to make the design's coding work, which can be found <a href="code.html">here</a>, I ultimately decided to remove the button that allows me to toggle between pages as the coding for it was to complicated for me to code. I then designed the box and other parts of it to be made later on in 3D Printing or Lazer Cutting.</p>
