--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-third">
         <h3>ELECTIVE LINKS</h3>
         <ul class="w3-ul">
-          <li class="w3-padding-16 w3-hover-black">
+          <li class="w3-padding-16">
             <a href="https://rdorville.github.io/EP1000/" onclick="w3_close()" class="w3-bar-item w3-button">Main elective website</a>
           </li>
-          <li class="w3-padding-16 w3-hover-black">
+          <li class="w3-padding-16">
             <a href="https://rdorville.github.io/digfab/" onclick="w3_close()" class="w3-bar-item w3-button">Lecturer's website</a>
           </li>
         </ul>
