--- a/process.html
+++ b/process.html
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Coding</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>Before the start of this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
+        <p>As soon as I got news of this project, I started thinking of what I wanted to make. I initially thought of a music box that automatically plays as you open it but then changed my mind to make a launchpad. The inspiration for that is <a href="https://youtu.be/7-myZU8M_b8">this</a>. Before I could start this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
         <p>The proposal is <a href="prj_Janesse.html">here</a></p>
         <p>After the project was approved, I started designing what I wanted to make on paper.</p>
         <p><img src="images/design.jpeg" style="width:100%" alt="design"></p>
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><img src="images/implement1.jpeg" style="width:100%" alt="adding keypad"></p>
         <p>I then secured the platforms down with some hot glue.</p>
         <p><img src="images/implement3.jpeg" style="width:100%" alt="adding speakers"></p>
-        <p>In the end after some trial and error, this is the finished product.</p>
+        <p>In the end after some trial and error, I finally glued the casing together and this is the finished product.</p>
         <p><img src="images/finish.jpeg" style="width:100%" alt="finish front"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
