--- a/process.html
+++ b/process.html
@@ -36,7 +36,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Coding</b></h4>
+      <h4><b>What I Did</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>As soon as I got news of this project, I started thinking of what I wanted to make. I initially thought of a music box that automatically plays as you open it but then changed my mind to make a launchpad. The inspiration for that is <a href="https://youtu.be/7-myZU8M_b8">this</a>. Before I could start this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
