--- a/safety.html
+++ b/safety.html
@@ -66,7 +66,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           c) Inform Campus Security by calling 6772-1234 for all emergencies and incident reporting.<br>
           3. Be familiar with the evacuation route and designated assembly area for the laboratory or workshop you are working in. These are posted on exit doors or at convenient location(s) within the laboratory or workshop.
           </p>
-          <h5>Tools</h5>
+          <h5><b>Tools</b></h5>
           <p>There are a variety of tools needed for this elective that is essential to the making of my final project. Many of these are just software and a few tools provided in the FabLab.
           </p>
           <p>And thus, this is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
