--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I DID</a>
   <a href="#project" onclick="w3_close()" class="w3-bar-item w3-button">MY FINAL PROJECT</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
+  <a href="https://jan-tz.github.io/EP1001/" onclick="w3_close()" class="w3-bar-item w3-button">EP1001</a>
   &nbsp;
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
 </nav>
